feat:Implementation of the internationalization on the location error messages, and parcial implementation of the GoogleMap

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,7 +10,6 @@
   "locationLongitude": "Longitude",
 
   "tripPlannerScreenTitle" : "Trips",
-  "tripPlannerSearchBar" : "Search",
   "tripPlannerTripName" : "Trip name:",
   "tripPlannerParticipants" : "Participants:",
   "tripPlannerParticipantName" : "Name:",
@@ -33,5 +32,6 @@
 
   "durationScreenTitle" : "Trip duration",
 
+  "searchBar" : "Search",
   "generalConfirmButton" : "Confirm"
 }
