--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -24,6 +24,11 @@
 
   "transportScreenTitle" : "Transporte",
   "transportName" : "Nombre del transporte:",
+  "transportCruise": "Crucero",
+  "transportMotorcycle": "Motocicleta",
+  "transportCar": "Auto",
+  "transportBus": "Autobús",
+  "transportAirPlane": "Avión",
 
   "participantsScreenTitle": "Participantes",
   "participantsPerson": "Persona",
