--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -22,8 +22,13 @@
   "groupScreenTitle" : "Viagem",
   "groupTripName" : "Viagem á Maldivas",
 
-  "transportScreenTitle" : "Transportes",
+  "transportScreenTitle" : "Transporte",
   "transportName" : "Nome do transporte:",
+  "transportCruise": "Cruzeiro",
+  "transportMotorcycle": "Moto",
+  "transportCar": "Carro",
+  "transportBus": "Ônibus",
+  "transportAirPlane": "Avião",
 
   "participantsScreenTitle" : "Participantes",
   "participantsPerson" : "Pessoa",
