feat: Internationalization of the variables of the future experience screen and some corrections of names of classes in the project

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,6 +30,14 @@
   "transportBus": "Bus",
   "transportAirPlane": "Airplane",
 
+  "experienceScreenTitle": "Experiences",
+  "experienceName": "Experience name:",
+  "experienceCulturalImmersion": "Immersion in a different culture",
+  "experienceAlternativeCuisine": "Explore alternative cuisine",
+  "experienceHistoricalSites": "Visit historical sites",
+  "experienceLocalEstablishments": "Visit local establishments such as parks/bars/shows",
+  "experienceContactWithNature": "Contact with nature",
+
   "participantsScreenTitle": "Participants",
   "participantsPerson" : "Pessoa",
   "participantsName" : "Name",
