feat: Complete internationalization of Edit Screen and trip departure/arrival dates

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,6 +15,8 @@
   "tripPlannerParticipantName" : "Name:",
   "tripPlannerParticipantAge" : "Age:",
   "tripPlannerTripButton" : "New travel plan",
+  "tripDepartureDate" : "Departure date",
+  "tripArrivalDate" : "Arrival date",
 
   "settingsDarkModeSwitch" : "Dark Mode",
   "settingsLanguageSwitch" : "Languages",
@@ -37,6 +39,10 @@
   "experienceHistoricalSites": "Visit historical sites",
   "experienceLocalEstablishments": "Visit local establishments such as parks/bars/shows",
   "experienceContactWithNature": "Contact with nature",
+
+  "cityScreenTitle" : "Stops",
+
+  "editTripScreenTitle": "Edit group",
 
   "participantsScreenTitle": "Participants",
   "participantsPerson" : "Pessoa",
