--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -15,6 +15,8 @@
   "tripPlannerParticipantName": "Nombre:",
   "tripPlannerParticipantAge": "Edad:",
   "tripPlannerTripButton": "Nuevo plan de viaje",
+  "tripDepartureDate" : "Fecha de salida",
+  "tripArrivalDate" : "Fecha de llegada",
 
   "settingsDarkModeSwitch": "Modo oscuro",
   "settingsLanguageSwitch": "Idiomas",
@@ -37,6 +39,10 @@
   "experienceHistoricalSites": "Visita sitios históricos",
   "experienceLocalEstablishments": "Visita establecimientos locales como parques/bares/espectáculos",
   "experienceContactWithNature": "Contacto con la naturaleza",
+
+  "cityScreenTitle" : "Paradas",
+
+  "editTripScreenTitle": "Editar grupo",
 
   "participantsScreenTitle": "Participantes",
   "participantsPerson": "Persona",
