--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -15,6 +15,8 @@
   "tripPlannerParticipantName" : "Nome:",
   "tripPlannerParticipantAge" : "Idade:",
   "tripPlannerTripButton" : "Novo plano de viagem",
+  "tripDepartureDate" : "Data de saída",
+  "tripArrivalDate" : "Data de chegada",
 
   "settingsDarkModeSwitch" : "Modo Escuro",
   "settingsLanguageSwitch" : "Linguagens",
@@ -37,6 +39,10 @@
   "experienceHistoricalSites": "Visitar locais históricos",
   "experienceLocalEstablishments": "Visitar estabelecimentos locais como parques/bares/shows",
   "experienceContactWithNature": "Contato com a natureza",
+
+  "cityScreenTitle" : "Paradas",
+
+  "editTripScreenTitle": "Editar grupo",
 
   "participantsScreenTitle" : "Participantes",
   "participantsPerson" : "Pessoa",
