feat: Creation of a formatter for the dates inside the listTile of arrival/departure date for the stops and complete internationalization of the TravelPlannerScreen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,9 +40,11 @@
   "experienceLocalEstablishments": "Visit local establishments such as parks/bars/shows",
   "experienceContactWithNature": "Contact with nature",
 
-  "cityScreenTitle" : "Stops",
+  "stopScreenTitle" : "Stops",
+  "stopName" : "Stop Name:",
+  "stopAddDestination" : "Add Destination",
 
-  "editTripScreenTitle": "Edit group",
+  "editTripScreenTitle": "Edit Trip",
 
   "participantsScreenTitle": "Participants",
   "participantsPerson" : "Pessoa",
