--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "en",
   "appShellTripPlannerText" : "Trip Planner",
-  "appShellMyTripText" : "My trip",
+  "appShellMyTripText" : "Ongoing trips",
   "appShellSettingsText" : "Settings",
 
   "locationDisabledLocationMessage": "Please enable your device localization",
@@ -18,6 +18,8 @@
   "tripDepartureDate" : "Departure date",
   "tripArrivalDate" : "Arrival date",
 
+  "settingsThemeSwitchText" : "Switch theme",
+  "settingsLanguageSelection" : "Select language",
   "settingsDarkModeSwitch" : "Dark Mode",
   "settingsLanguageSwitch" : "Languages",
 
