feat: Implementation of the screen for active trips for future insertion of images and management for the trip booklet

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,8 +23,11 @@
   "settingsDarkModeSwitch" : "Dark Mode",
   "settingsLanguageSwitch" : "Languages",
 
-  "groupScreenTitle" : "Trip",
-  "groupTripName" : "Trip to the Maldives",
+  "tripScreenTitle" : "Trip",
+  "tripName" : "Trip to the Maldives",
+  "tripStatusOngoing" : "Ongoing",
+  "tripStatusCompleted" : "Completed",
+  "tripStatusNoOngoingTrips" : "No ongoing trips",
 
   "transportScreenTitle" : "Transport",
   "transportName" : "Transport Name:",
