--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -71,5 +71,11 @@
   "generalConfirmButton" : "Confirmar",
   "generalCancelButton" : "Cancelar",
   "generalYesButton" : "Sim",
-  "generalNoButton" : "Não"
+  "generalNoButton" : "Não",
+
+  "errorLoadingLogo" : "Erro ao carregar logo: {error}",
+  "finalMessage" : "UMA VIAGEM NÃO SE MEDE EM MILHAS, MAS EM MOMENTOS",
+  "invalidDate" : "Data inválida",
+  "addStopImageDialogComment": "Adicionar imagem da parada",
+
 }
